# bilibili_real_score_rs

./: Cargo.toml  README.md
src/: main.rs
src/service/: get_score_json.rs  mod.rs  score.rs  score_service.rs
src/utils/: http_util.rs  json_util.rs  mod.rs
